--- a/NewsDWNhom9/pom.xml
+++ b/NewsDWNhom9/pom.xml
@@ -33,8 +33,8 @@
             <version>4.1.2</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>8.0.31</version>
         </dependency>
         <dependency>
@@ -42,6 +42,12 @@
             <artifactId>jdbi3-core</artifactId>
             <version>3.35.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+
     </dependencies>
 
 </project>
